force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/SRQI_Care_Minutes_Actual__c.object-meta.xml
<CustomObject>
    <label>Care Minutes Actual</label>
    <nameField>
        <displayFormat>CMA-{00000}</displayFormat>
        <label>Care Minutes Actual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Minutes Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>