force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Account_Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Integration_Id__c</fullName>
    <formula>Provider_Name__r.Integration_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAPS Provider Id</label>
    <type>Text</type>
</CustomField>