force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Actual_Care_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Care_Minutes__c</fullName>
    <formula>Total_Actual_Care_Hours__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Care Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>