force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/ASF_Enrolled_Licensed_Nurses__c.field-meta.xml
<CustomField>
    <fullName>ASF_Enrolled_Licensed_Nurses__c</fullName>
    <description>Enrolled and Licensed Nurses (Registered with the NMBA) - Total Residential Hours (Agency Staff Hours - Direct Care Detail)</description>
    <label>Enrolled &amp; Licensed Nurses Total Res Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>