force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/ASF_Registered_Nurse__c.field-meta.xml
<CustomField>
    <fullName>ASF_Registered_Nurse__c</fullName>
    <description>Registered Nurse - Total Residential Hours (Agency Staff Hours - Direct Care Detail)</description>
    <label>Registered Nurse - Total Residential Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>