force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Available_Bed_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Bed_Days__c</fullName>
    <label>Available Bed Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>