force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Average_Actual_Care_Minutes_per_day__c.field-meta.xml
<CustomField>
    <fullName>Average_Actual_Care_Minutes_per_day__c</fullName>
    <formula>Actual_Care_Minutes__c / Occupied_Bed_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Actual Care Minutes (per day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>