force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Avg_Actual_Registered_Nurs_Mins_per_day__c.field-meta.xml
<CustomField>
    <fullName>Avg_Actual_Registered_Nurs_Mins_per_day__c</fullName>
    <formula>Actual_Registered_Nursing_Minutes__c / Occupied_Bed_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Actual Registered Nurs Mins per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>