force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Care_Minutes_Summary__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Summary__c</fullName>
    <label>Care Minutes Summary</label>
    <referenceTo>Care_Minutes_Summary__c</referenceTo>
    <relationshipLabel>Care Minutes Actuals</relationshipLabel>
    <relationshipName>Care_Minutes_Actuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField> 