force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/CMA_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CMA_External_ID__c</fullName>
    <description>Provider id -service id- Care minutes summary id
(Oracle ID-Oracle Service ID-Care minutes summary id)</description>
    <externalId>true</externalId>
    <label>CMA External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>