force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Date_QFR_First_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_QFR_First_Submitted__c</fullName>
    <label>Date QFR First Submitted</label>
    <type>Date</type>
</CustomField>