force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <label>Financial Year</label>
    <length>12</length>
    <type>Text</type>
</CustomField>