force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Late_Submission__c.field-meta.xml
<CustomField>
    <fullName>Late_Submission__c</fullName>
    <description>Compares Date first submitted with QFR due date to show if the record was a late submission or not</description>
    <formula>IF(Date_QFR_First_Submitted__c &gt; QFR_Due_Date__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Submission</label>
    <type>Checkbox</type>
</CustomField>