force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/LWH_Enrolled_Licensed_Nurses__c.field-meta.xml
<CustomField>
    <fullName>LWH_Enrolled_Licensed_Nurses__c</fullName>
    <description>Enrolled and Licensed Nurses (Registered with the NMBA) - Total Residential Hours - (Labour Worked Hours - Direct Care)</description>
    <label>Enrolled &amp; Licensed Nurses Total Res Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>