force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/LWH_PersCare_Staff_Assistants_in_Nursing__c.field-meta.xml
<CustomField>
    <fullName>LWH_PersCare_Staff_Assistants_in_Nursing__c</fullName>
    <description>Personal Care Staff/Assistants in Nursing - Total Residential Hours (Labour Worked Hours - Direct Care)</description>
    <label>PersonalCare Staff/Assistants in Nursing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>