force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/NAPS_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>NAPS_Service_Id__c</fullName>
    <formula>Service_Account__r.Service_Name__r.Integration_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAPS Service Id</label>
    <type>Text</type>
</CustomField>