force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Occupied_Bed_Days__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Bed_Days__c</fullName>
    <label>Occupied Bed Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>