force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Minutes Actuals</relationshipLabel>
    <relationshipName>Care_Minutes_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>