force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/QFR_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>QFR_Due_Date__c</fullName>
    <label>QFR Due Date</label>
    <type>Date</type>
</CustomField>