force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>22</length>
    <type>Text</type>
</CustomField>