force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/ResiCare_Labour_Csts_Hrs_Reissued__c.field-meta.xml
<CustomField>
    <fullName>ResiCare_Labour_Csts_Hrs_Reissued__c</fullName>
    <description>Date the ResiCare and Labour Costs &amp; Hours dataset was last reissued due to failed reasonableness check</description>
    <label>ResiCare &amp; Labour Csts &amp; Hrs Reissued</label>
    <type>Date</type>
</CustomField>