force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/ResiCare_Labour_Csts_Hrs_Resubmitted__c.field-meta.xml
<CustomField>
    <fullName>ResiCare_Labour_Csts_Hrs_Resubmitted__c</fullName>
    <description>Date the ResiCare and Labour Costs &amp; Hours dataset was last resubmitted</description>
    <label>ResiCare &amp; Labour Csts &amp; Hrs Resubmitted</label>
    <type>Date</type>
</CustomField>