force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Stewart_Brown_Reasonableness__c.field-meta.xml
<CustomField>
    <fullName>Stewart_Brown_Reasonableness__c</fullName>
    <description>Stewart Brown Reasonableness Check Outcome</description>
    <label>Stewart Brown Reasonableness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>