force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Total_Actual_Care_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Care_Hours__c</fullName>
    <formula>Total_Labour_Worked_Hours__c  +  Total_Agency_Staff_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Care Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>