force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Total_Agency_Staff_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Agency_Staff_Hours__c</fullName>
    <formula>ASF_Registered_Nurse__c + ASF_Enrolled_Licensed_Nurses__c + ASF_PersCare_Staff_Assistants_in_Nursing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Agency Staff Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>