force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Total_Labour_Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Labour_Worked_Hours__c</fullName>
    <formula>LWH_Registered_Nurse__c  + LWH_PersCare_Staff_Assistants_in_Nursing__c +   LWH_Enrolled_Licensed_Nurses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Labour Worked Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>