force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/fields/Total_Registered_Nurse_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Registered_Nurse_Hours__c</fullName>
    <formula>LWH_Registered_Nurse__c + ASF_Registered_Nurse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Registered Nurse Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>