force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/validationRules/BlankAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>BlankAccount</fullName>
    <active>true</active>
    <description>Lookup to Account should not be blank</description>
    <errorConditionFormula>ISBLANK( Provider_Name__c )</errorConditionFormula>
    <errorDisplayField>Provider_Name__c</errorDisplayField>
    <errorMessage>Account should not be blank</errorMessage>
</ValidationRule>