force-app/main/default/objects/SRQI_Care_Minutes_Actual__c/validationRules/BlankServiceAccountRelationship.validationRule-meta.xml
<ValidationRule>
    <fullName>BlankServiceAccountRelationship</fullName>
    <active>true</active>
    <description>Lookup to Service Account Relationship should not be blank</description>
    <errorConditionFormula>ISBLANK( Service_Account__c )</errorConditionFormula>
    <errorDisplayField>Service_Account__c</errorDisplayField>
    <errorMessage>Service Account Relationship should not be blank</errorMessage>
</ValidationRule>